--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
-  "name": "ecommerce-3",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "autoprefixer": "10.4.14",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
-  }
+    "name": "ecommerce-3",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@babel/core": "^7.21.4",
+        "@sanity/client": "^5.4.2",
+        "@sanity/image-url": "^1.0.2",
+        "@stripe/stripe-js": "^1.52.1",
+        "canvas-confetti": "^1.6.0",
+        "next": "13.3.1",
+        "next-sanity-image": "^6.0.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hot-toast": "^2.4.0",
+        "react-icons": "^4.8.0",
+        "stripe": "^12.2.0"
+    },
+    "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
+        "autoprefixer": "^10.4.14",
+        "eslint": "^8.39.0",
+        "eslint-config-next": "^13.3.1",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.1"
+    }
 }
